[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["Arai Shota <me@arsho.dev>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.942"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
